--- a/P02-VehiclesAPI/vehicles-api/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/vehicles-api/src/main/resources/application.properties
@@ -1,2 +1,10 @@
+logging.level.org.springframework:DEBUG
+
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:vehicles
+
 pricing.endpoint=http://localhost:8082
 maps.endpoint=http://localhost:9191
